add the config of server and the index.html

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "assignment",
   "version": "1.0.0",
   "description": "This is a the course assignment for Web",
-  "main": "index.js",
+  "main": "quiz.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
